<resources>
    <string name="app_name">Local Business Card</string>
    <string name="blackBirdLogo">BlackBird Logo</string>
    <string name="black_bird">BlackBird</string>
    <string name="wine_shop">Wine Shop</string>
    <string name="location_icon">Location Icon</string>
    <string name="websiteName">www.blackbirdwine.com</string>
    <string name="emailAddress">info@blackbirdwines.com</string>
    <string name="faxNumber">0845874597</string>
    <string name="phoneNumber">0845879808</string>
    <string name="address"> Ground Floor / Wellington Central,\n836, Welligton St, West Perth,\nWA 6005.</string>
</resources>
